--- a/who-we-are.html
+++ b/who-we-are.html
@@ -448,7 +448,7 @@
             </a>
         </div> 
     </footer>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
